Changes for Test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <!-- <link rel="stylesheet" type="text/css" href="dep/normalize.css/normalize.css" /> -->
   <!-- <link rel="stylesheet" type="text/css" href="dep/Font-Awesome/css/font-awesome.css" /> -->
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/fontawesome.min.css"
     integrity="sha512-B46MVOJpI6RBsdcU307elYeStF2JKT87SsHZfRSkjVi4/iZ3912zXi45X5/CBr/GbCyLx6M1GQtTKYRd52Jxgw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body lang="en">
@@ -36,7 +36,7 @@
         </div>
         <div class="details">
           <header>
-            <h3>Senior Specialist Node.js</h3>
+            <h3>Senior Specialist</h3>
             <span class="place">LTI Mindtree</span>
             <span class="location">Mumbai</span>
           </header>
@@ -66,11 +66,12 @@
                 (EIF).</li>
               <li>Actively participate in architectural decisions, bridging the gap between business requirements and
                 technical implementation of EIF.</li>
-                <li>Enhanced efficiency and performance by optimizing code, resulting in reduced execution time.</li>
+              <li>Creating and Deployment of Infra using Terraform, Ansible and serverless stack.</li>
               <li>Coordinate with cross-functional teams with respect to deployments and ITIL </li>
-              <li>Fullstack Development using React for Internal reporting tools</li>
-              <li>Lead Decomissioning of Old Internal ETL Tools effectively saving around $400K USD yearly in licencing cost </li>
-              
+              <li></li>
+              <li>Lead Decomissioning of Old Internal ETL Tools effectively saving around $400K USD yearly in licencing
+                cost </li>
+
             </ul>
           </div>
         </div>
@@ -89,8 +90,9 @@
           </header>
           <div>
             <ul>
-              <li>Developed REST API services for backend application functionality using Spring Boot and Hibernate.</li>
-              <li>Automated CI/CD deployments for the backend application on AWS EC2 to streamline releases .</li>
+              <li>Developed REST API services for backend application functionality using Spring Boot and Hibernate.
+              </li>
+              <li>Automated CI/CD deployments for the backend application on AWS using Unix and jenkins .</li>
               <li>Maintained and supported production releases, ensuring minimal downtime and high reliability.</li>
             </ul>
           </div>
@@ -112,7 +114,7 @@
             <ul>
               <li>Developed fullstack Java applications using JSP and Spring.</li>
               <li>Implemented OWASP Top 10 (2013) security fixes to enhance application security.</li>
-              <li>Authored unit test cases with JUnit to ensure code reliability.</li>              
+              <li>Authored unit test cases with JUnit to ensure code reliability.</li>
             </ul>
           </div>
         </div>
@@ -153,9 +155,11 @@
           </header>
           <div>
             <ul>
-              <li>Included in AWS Case Studies Link can be found <a href="https://aws.amazon.com/solutions/case-studies/travelex-integration-on-aws/">here</a> </li>
+              <li>Included in AWS Case Studies Link can be found <a
+                  href="https://aws.amazon.com/solutions/case-studies/travelex-integration-on-aws/">here</a> </li>
               <li>Decoupled Architecture With Event Driven Solution and Serverless Architecture</li>
-              <li>Gaining deployment Velocity and 70 percent Cost reduction in AWS as compared to Annual licencing cost </li>
+              <li>Gaining deployment Velocity and 70 percent Cost reduction in AWS as compared to Annual licencing cost
+              </li>
             </ul>
           </div>
         </div>
@@ -173,8 +177,30 @@
           </header>
           <div>
             <ul>
-              <li>Designed a core framework for data ingestion and modeling using DBT and AWS, enabling machine learning to drive revenue growth through optimized card reload processes and targeted marketing. </li>
-              <li>Delivered near real-time data access from over 3,500 stores, empowering stakeholders to make faster, data-driven decisions.</li>
+              <li>Designed a core framework for data ingestion and modeling using DBT and AWS, enabling machine learning
+                to drive revenue growth through optimized card reload processes and targeted marketing. </li>
+              <li>Delivered near real-time data access from over 3,500 stores, empowering stakeholders to make faster,
+                data-driven decisions.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="blocks">
+        <div class="date">
+          <span>2021</span><span>2022</span>
+        </div>
+        <div class="decorator">
+        </div>
+        <div class="details">
+          <header>
+            <h3>Foxweb</h3>
+            <span class="place">Travelex</span>
+          </header>
+          <div>
+            <ul>
+              <li>Automated CI process of Foxweb to store images on AWS ECR </li>
+              <li>Automated CD pipeline with Octopus for AWS Kubernetes, Later replaced with Circle CI due to cost constraint </li>
+              <li>Build and maintain  infra of Application using terraform and Ansible </li>
             </ul>
           </div>
         </div>
@@ -193,8 +219,9 @@
           <div>
             <ul>
               <li>Managed the entire backend for salon services, supporting over 10,000 active users.</li>
-              <li>Automated testing with Cucumber and JUnit to ensure high-quality deployments with minimal production issues.</li>              
-              <li>Used Swagger for API Documentation to communicate effectively with other developer</li>              
+              <li>Automated testing with Cucumber and JUnit to ensure high-quality deployments with minimal production
+                issues.</li>
+              <li>Used Unix and Jenkins to  automate backend Deployment to AWS EC2 production</li>
             </ul>
           </div>
         </div>
@@ -213,7 +240,7 @@
           <div>
             <ul>
               <li>Fullstack Java development with JSP, Servlets , Spring </li>
-              <li>Bug Fixes , Feature Development  </li>      
+              <li>Bug Fixes , Feature Development </li>
             </ul>
           </div>
         </div>
@@ -236,7 +263,7 @@
             <span class="place">Hiray College</span>
             <span class="location">Mumbai, India</span>
           </header>
-          <div>Passed with First class  64%</div>
+          <div>Passed with First class 64%</div>
         </div>
       </section>
       <section class="blocks">
@@ -277,7 +304,7 @@
         Contact Info
       </h1>
       <ul>
-        <li><a href="https://siddhirajpantoji.github.io/" target="#"><i class="fa fa-globe"></i> Website</a></li>
+        <!-- <li><a href="https://siddhirajpantoji.github.io/" target="#"><i class="fa fa-globe"></i> Website</a></li> -->
         <li><a href="https://www.linkedin.com/in/siddhiraj-pantoji" target="#"><i class="fa-brands fa-linkedin"></i>
             Linkedin</a></li>
         <li><a href="mailto:siddhirajpantoji@gmail.com"><i class="fa fa-envelope"></i> siddhirajpantoji@gmail.com</a>
@@ -291,11 +318,21 @@
         skills
       </h1>
       <ul>
+        <li>Terraform</li>
+        <li>Ansible</li>
+        <li>Circle CI</li>
+        <li>Jenkins</li>
+        <li>Octopus</li>
+        <li>Airflow</li>
+        <li>Unix</li>
+        <li>Powershell</li>
+        <li>Docker</li>
+      </ul>
+      <ul>
         <li>Node.js</li>
         <li>Java</li>
         <li>Python</li>
         <li>DBT</li>
-        <li>React</li>
         <li>Maven</li>
       </ul>
       <ul>
@@ -303,15 +340,7 @@
         <li>Express</li>
         <li>Spring Boot</li>
       </ul>
-      <ul>
-        <li>Circle CI</li>
-        <li>Jenkins</li>
-        <li>Airflow</li>
-        <li>Terraform</li>
-        <li>Shell Script</li>
-        <li>Powershell</li>
-        <li>Docker</li>
-      </ul>
+      
       <ul>
         <li>AWS</li>
         <li>GCP</li>
